Upgraded mvn compiler to fix java11 build