@@ -39,7 +39,7 @@
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
@@ -482,6 +482,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
+                            <release>${project.java.version}</release>
                             <source>${project.java.version}</source>
                             <target>${project.java.version}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
@@ -490,8 +491,6 @@
                                 <compilerArg>-Xlint:all</compilerArg>
                                 <compilerArg>-Xlint:-processing</compilerArg>
                                 <!--<compilerArg>-Werror</compilerArg>-->
-                                <arg>--add-modules</arg>
-                                <arg>java.xml.bind,java.activation</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
